--- a/src/MBFilmes.Api/MBFilmes.Api.csproj
+++ b/src/MBFilmes.Api/MBFilmes.Api.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
+    <PackageReference Include="SwashBuckle.AspNetCore" Version="6.9.0" />
+  </ItemGroup>
+
 </Project>
